--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,12 @@ project(aboo)
 set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O3 -ggdb -std=c++11 -Wall -Wno-deprecated -Werror -Wno-unused-function")
 
-set(LIB_SRC 
+link_directories(/usr/local/lib)
+
+set(LIB_SRC
 	aboo/log.cpp
 	aboo/util.cpp
+	aboo/config.cpp
 	)
 
 add_library(aboo SHARED ${LIB_SRC})
@@ -16,6 +19,10 @@ add_library(aboo SHARED ${LIB_SRC})
 add_executable(test tests/test.cpp)
 add_dependencies(test aboo)
 target_link_libraries(test aboo)
+
+add_executable(test_config tests/test_config.cpp)
+add_dependencies(test_config aboo)
+target_link_libraries(test_config aboo -lyaml-cpp)
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
