--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ link_directories(/usr/local/lib)
 set(LIB_SRC
 	aboo/config.cpp
 	aboo/fiber.cpp
+	aboo/iomanager.cpp
 	aboo/log.cpp
 	aboo/thread.cpp
 	aboo/scheduler.cpp
@@ -57,6 +58,11 @@ add_executable(test_scheduler tests/test_scheduler.cpp)
 #force_redefine_file_macro_for_sources(test_config) #__FILE__
 add_dependencies(test_scheduler aboo)
 target_link_libraries(test_scheduler ${LIB_LIB})
+
+add_executable(test_iomanager tests/test_iomanager.cpp)
+#force_redefine_file_macro_for_sources(test_config) #__FILE__
+add_dependencies(test_iomanager aboo)
+target_link_libraries(test_iomanager ${LIB_LIB})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
