实现了HTTP模块的封装，利用了一个ragel解析http请求和响应的开源项目封装到自己的解析类中

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ set(LIB_SRC
 	aboo/config.cpp
 	aboo/fd_manager.cpp
 	aboo/fiber.cpp
+	aboo/http/http.cpp
+	aboo/http/http_parser.cpp
+	aboo/http/http11_parser.rl.cpp
+	aboo/http/httpclient_parser.rl.cpp
 	aboo/iomanager.cpp
 	aboo/log.cpp
 	aboo/hook.cpp
@@ -90,6 +94,16 @@ add_executable(test_bytearray tests/test_bytearray.cpp)
 #force_redefine_file_macro_for_sources(test_config) #__FILE__
 add_dependencies(test_bytearray aboo)
 target_link_libraries(test_bytearray ${LIB_LIB})
+
+add_executable(test_http tests/test_http.cpp)
+#force_redefine_file_macro_for_sources(test_config) #__FILE__
+add_dependencies(test_http aboo)
+target_link_libraries(test_http ${LIB_LIB})
+
+add_executable(test_http_parser tests/test_http_parser.cpp)
+#force_redefine_file_macro_for_sources(test_config) #__FILE__
+add_dependencies(test_http_parser aboo)
+target_link_libraries(test_http_parser ${LIB_LIB})
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
